--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <!--<link href="style.css" type="text/css" rel="stylesheet"/>-->
         <script src="https://code.jquery.com/jquery.min.js"></script>
         <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
+        <script src="https://code.angularjs.org/1.5.8/angular-messages.js"></script>
         <script src="app.js"></script>
         
     </head>
@@ -34,7 +35,18 @@
 
             <div ng-controller="mainController">
 
-                <h1>Hello world!</h1>
+                <form name="myForm">
+                    <label>
+                        Enter text:
+                        <input type="email" ng-model="field" name="myField" required minlength="5" maxlength="16" />
+                    </label>
+                    <div ng-messages="myForm.myField.$error" role="alert">
+                        <div class="alert alert-danger" ng-message="required">Please enter a value for this field.</div>
+                        <div class="alert alert-danger" ng-message="email">This field must be a valid email address.</div>
+                        <div class="alert alert-danger" ng-message="minlength">This field must be at least 5 characters long.</div>
+                        <div class="alert alert-danger" ng-message="maxlength">This field can be at most 16 characters long.</div>
+                    </div>
+                </form>
 
             </div>
             
